Completed fixing collapsable menus from getting cut off on mobile

--- a/client/src/components/app.scss
+++ b/client/src/components/app.scss
@@ -118,7 +118,7 @@ main {
   height: 100vh;
   display: inline-block;
   width: 90%;
-  overflow: auto;
+  //overflow: auto;
 }
 
 /* =========== Home =========== */
